toggle button from Play to Play Again after betting.

--- a/LuckySevens.html
+++ b/LuckySevens.html
@@ -32,7 +32,7 @@
                     <label for="startingBetIn">Starting Bet: $</label>
                     <input type="number" id="startingBetIn" value="0.00" autofocus>
                 </div>
-                <button style="margin:10px; padding:10px;" type="submit" name="play">Play</button>
+                <button style="margin:10px; padding:10px;" type="submit" id="playButton">Play</button>
             </form>
             <hr>
             <h1>Results</h1>
