removed placeholder text from input box. removed temporary comments.

--- a/LuckySevens.html
+++ b/LuckySevens.html
@@ -30,7 +30,7 @@
             <form onsubmit="return main();">
                 <div>
                     <label for="startingBetIn">Starting Bet: $</label>
-                    <input type="number" id="startingBetIn" value="0.00" autofocus>
+                    <input type="number" id="startingBetIn" value="" autofocus>
                 </div>
                 <button style="margin:10px; padding:10px;" type="submit" id="playButton">Play</button>
             </form>
